--- a/index.html
+++ b/index.html
@@ -7,6 +7,68 @@
     <title>NovaTech</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <img src="./assets/imgs/logo.webp" alt="Logo NovaTech" />
+        <ul>
+          <li><a href="#">Accueil</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">A propos</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section id="hero_section">
+      <h1>Agence NovaTech</h1>
+      <h3>Des solutions numériques pour votre croissant</h3>
+      <p>NovaTech accompagne les PME dans leur transformations digitales</p>
+      <a href="#services_section">Découvrir nos services</a>
+    </section>
+    <section id="services_section">
+      <p>Nos services</p>
+      <div class="services_container">
+        <div class="service">
+          <img src="#" alt="Icone du service" />
+          <div class="service_info">
+            <p>Titre du service</p>
+            <p>Description du service</p>
+          </div>
+        </div>
+        <div class="service">
+          <img src="#" alt="Icone du service" />
+          <div class="service_info">
+            <p>Titre du service</p>
+            <p>Description du service</p>
+          </div>
+        </div>
+        <div class="service">
+          <img src="#" alt="Icone du service" />
+          <div class="service_info">
+            <p>Titre du service</p>
+            <p>Description du service</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="about_section">
+      <p>A propos de NovaTech</p>
+      <p>
+        NovaTech est une start-up passionée par la tech, dédiée a rendre le digital simple et accessible pour tout le monde. Depuis plus de 3 siècles nous
+        sommes investis dans la présence en ligne de nos clients
+      </p>
+    </section>
+    <section id="contact_section">
+      <p>Contactez nous !</p>
+      <form action="">
+        <input type="text" placeholder="Votre nom" />
+        <input type="text" placeholder="Votre adresse mail" />
+        <textarea name="" id="" placeholder="Votre message"></textarea>
+        <button>Envoyer</button>
+      </form>
+    </section>
+    <footer>
+      <p>2025 NovaTech - Tous droits réservés</p>
+    </footer>
     <script src="./assets/script/script.js"></script>
   </body>
 </html>
