service section html

--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
         <div class="service">
           <img src="#" alt="Icone du service" />
           <div class="service_info">
-            <p>Titre du service</p>
-            <p>Description du service</p>
+            <p>Sites web</p>
+            <p>Création de votre site web, en vanilla ou a l'aide de framework tel que React, NextJS ou autres.</p>
           </div>
         </div>
         <div class="service">
           <img src="#" alt="Icone du service" />
           <div class="service_info">
-            <p>Titre du service</p>
-            <p>Description du service</p>
+            <p>Application mobile</p>
+            <p>Création d'applications mobiles en tout genre, jeux vidéos, logiciel pour votre entreprise.</p>
           </div>
         </div>
         <div class="service">
           <img src="#" alt="Icone du service" />
           <div class="service_info">
-            <p>Titre du service</p>
-            <p>Description du service</p>
+            <p>Déploiement</p>
+            <p>Déploiement de votre site ou application. Vous nous avez fait confiance pour développer votre projet ? Nous nous occupons de son déploiment</p>
           </div>
         </div>
       </div>
