--- a/index.html
+++ b/index.html
@@ -25,26 +25,26 @@
       <a href="#services_section">Découvrir nos services</a>
     </section>
     <section id="services_section">
-      <p>Nos services</p>
+      <p class="service_title">Nos services</p>
       <div class="services_container">
         <div class="service">
-          <img src="#" alt="Icone du service" />
+          <img src="./assets/imgs/search.svg" alt="Icone du service" />
           <div class="service_info">
-            <p>Sites web</p>
+            <p class="service_title">Sites web</p>
             <p>Création de votre site web, en vanilla ou a l'aide de framework tel que React, NextJS ou autres.</p>
           </div>
         </div>
         <div class="service">
-          <img src="#" alt="Icone du service" />
+          <img src="./assets/imgs/search.svg" alt="Icone du service" />
           <div class="service_info">
-            <p>Application mobile</p>
+            <p class="service_title">Application mobile</p>
             <p>Création d'applications mobiles en tout genre, jeux vidéos, logiciel pour votre entreprise.</p>
           </div>
         </div>
         <div class="service">
-          <img src="#" alt="Icone du service" />
+          <img src="./assets/imgs/search.svg" alt="Icone du service" />
           <div class="service_info">
-            <p>Déploiement</p>
+            <p class="service_title">Déploiement</p>
             <p>Déploiement de votre site ou application. Vous nous avez fait confiance pour développer votre projet ? Nous nous occupons de son déploiment</p>
           </div>
         </div>
