--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </ul>
       </nav>
     </header>
-    <section id="hero_section" class="grid content-center h-[100vh] text-center relative">
+    <section id="hero_section" class="grid content-center justify-center h-[100vh] text-center relative">
       <h1 class="text-5xl font-bold text-[#1a1a1a] mb-2">Agence NovaTech</h1>
       <h3 class="text-2xl font-bold text-[#2765d8] mb-2">Des solutions numériques pour votre croissant</h3>
       <p class="text-lg color-[#4a4a4a] mb-4">NovaTech accompagne les PME dans leur transformations digitales</p>
@@ -60,7 +60,7 @@
         </div>
       </div>
     </section>
-    <section id="about_section" class="px-28 py-5 text-center max-w-3xl mx-auto my-0">
+    <section id="about_section" class="px-20 py-12 text-center max-w-3xl mx-auto my-0">
       <p class="text-4xl font-bold text-[#1a1a1a] mb-8">A propos de NovaTech</p>
       <p class="text-2xl text-[#4a5568] text-justify">
         NovaTech est une start-up passionée par la tech, dédiée a rendre le digital simple et accessible pour tout le monde. Depuis plus de 3 siècles nous
@@ -73,18 +73,18 @@
         <input
           type="text"
           placeholder="Votre nom"
-          class="px-4 py-5 border-0 rounded-sm text-lg text-[#1a1a1a] transition bg-[#fffffff2] focus:outline-0 focus:bg-white focus:shadow-2xs"
+          class="px-4 py-5 border-0 rounded-md text-lg text-[#1a1a1a] transition bg-[#fffffff2] focus:outline-0 focus:bg-white focus:shadow-2xs"
         />
         <input
           type="text"
           placeholder="Votre adresse mail"
-          class="px-4 py-5 border-0 rounded-sm text-lg text-[#1a1a1a] transition bg-[#fffffff2] focus:outline-0 focus:bg-white focus:shadow-2xs"
+          class="px-4 py-5 border-0 rounded-md text-lg text-[#1a1a1a] transition bg-[#fffffff2] focus:outline-0 focus:bg-white focus:shadow-2xs"
         />
         <textarea
           name=""
           id=""
           placeholder="Votre message"
-          class="px-4 py-5 border-0 rounded-sm text-lg text-[#1a1a1a] transition bg-[#fffffff2] focus:outline-0 focus:bg-white focus:shadow-2xs min-h-32 resize-y"
+          class="px-4 py-5 border-0 rounded-md text-lg text-[#1a1a1a] transition bg-[#fffffff2] focus:outline-0 focus:bg-white focus:shadow-2xs min-h-32 resize-y"
         ></textarea>
         <button
           class="px-4 py-7 bg-white text-[#2765d8] border-0 rounded-md text-xl font-bold cursor-pointer transition shadow-2xl hover:bg-[#f1f5f9] hover:-translate-y-px shadow-2xs"
